--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-__pycache__/apiWrappers.cpython-38.pyc
-__pycache__/botLogic.cpython-38.pyc
-__pycache__
+__pycache__/
 userdata/
 usrdata/
 env/
 dist/
 bin/
-__pycache__/
 build/
 .buildozer/
 .DS_store/
+.vscode/
+mypython/
